--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,6 @@
 <IfModule mod_rewrite.c>
 Options +FollowSymLinks
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteBase /php/php-framework/
+RewriteRule ^\/([^\/]+)\/([^\/]+)\/?  /index.php?var1=$1&var2=$2 [L]
 </IfModule>
