--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,5 @@
 Options +FollowSymLinks
 RewriteEngine On
 RewriteBase /php/php-framework/
-RewriteRule ^\/([^\/]+)\/([^\/]+)\/?  /index.php?var1=$1&var2=$2 [L]
+RewriteRule ^\/([^\/]+)\/([^\/]+)\/?  /index.php?c=$1&a=$2 [L]
 </IfModule>
